Android and Java SE/EE ready version.
#10972